# c2c7demo

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  asset-manifest.json  index.html  manifest.json
.github/workflows/: build-binaries.yml  web.yml
python/: README.md  c2c7_cobb.py  cobb_draw.py  requirements.txt  utils.py
react/: README.md  package-lock.json  package.json
react/public/: index.html
react/src/: App.css  App.tsx  index.css
script/: download_weights.py  resize_align_corners.py  zip_bin.py
src/: batch.rs  dev.rs  draw.rs  lib.rs  main.rs
static/css/: main.13990702.css  main.13990702.css.map  main.90fd1065.css  main.90fd1065.css.map
static/js/: 787.0b3ae934.chunk.js  787.0b3ae934.chunk.js.map  main.9230db8e.js  main.9230db8e.js.map  main.a2c5b0d2.js  main.a2c5b0d2.js.map  main.bb070dd0.js  main.bb070dd0.js.map  main.c19cbf74.js  main.c19cbf74.js.map  main.eb752ed2.js  main.eb752ed2.js.map  main.ef58ff2f.js  main.ef58ff2f.js.map
static/media/: c2c7demo_bg.230a41bc35664b53b7a6.wasm  c2c7demo_bg.4ac8dab7e74c3ebbeb8c.wasm  c2c7demo_bg.5040477edd834ce06147.wasm  c2c7demo_bg.6670c6e6c03a36e7a7d3.wasm  c2c7demo_bg.c3df73389ffc123737f6.wasm  c2c7demo_bg.c90673e0b6e02409e70c.wasm
tests/: cli.rs
tests/img/: ATTRIBUTION.md
