[package]
name = "c2c7demo"
version = "0.1.0"
edition = "2021"

description = "CLAHE (Contrast Limited Adaptive Histogram Equalisation)"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
license = "MIT"

[[bin]]
name = "c2c7demo"
path = "src/main.rs"

[[bin]]
name = "dev"
path = "src/dev.rs"

[[bin]]
name = "draw"
path = "src/draw.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
log = "0"
env_logger = "0"
image = "0.23"
imageproc = "0"
dicom = "0"
tract-onnx = "0"
clahe = { path = 'clahe' }
line_drawing = "1"
svg = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0"
usvg = "0"
tiny-skia = "0"
base64 = "0"
lyon_geom = "0"