[package]
name = "c2c7demo"
version = "0.1.0"
edition = "2021"

description = "C2C7 Cobb angle demo"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
license = "MIT"

[[bin]]
name = "c2c7angle"
path = "src/main.rs"

[[bin]]
name = "c2c7batch"
path = "src/batch.rs"

[[bin]]
name = "dev"
path = "src/dev.rs"

[[bin]]
name = "draw"
path = "src/draw.rs"

[lib]
name = "c2c7demo"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "3", features = ["derive"] }
log = "0"
env_logger = "0"
image = { version="0.23", default-features = false, features = ["png", "jpeg"] }
imageproc =  { version = "0", default-features = false }
dicom = { version = "0", default-features = false }
tract-onnx = { version = "0", default-features = false }
clahe = { path = 'clahe' }
line_drawing = "1"
svg = { version = "0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
resvg = { version = "0", default-features = false, features = ["text", "system-fonts"] }
usvg = { version = "0", default-features = false }
tiny-skia = { version = "0", default-features = false }
base64 = { version = "0", default-features = false }
lyon_geom = { version = "0", default-features = false }
csv = "1"
wasm-bindgen = "0.2"
wasm-logger = "0"
js-sys = "0.3"

[dev-dependencies]
assert_cmd = "2"